@@ -11,7 +11,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Optional;
 import java.util.stream.StreamSupport;
 
@@ -20,7 +21,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.only;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class SimpleCouchDbRepositoryTest {
@@ -48,11 +53,11 @@ class SimpleCouchDbRepositoryTest {
     @Test
     public void testSaveAll() throws IOException {
         TestDocument clientProcessed = new TestDocument("something");
-        when(client.saveAll(any(), any())).thenReturn(List.of(clientProcessed, clientProcessed, clientProcessed)).thenThrow(new IOException("error"));
-        Iterable<TestDocument> saved = repository.saveAll(List.of(new TestDocument(), new TestDocument(), new TestDocument()));
+        when(client.saveAll(any(), any())).thenReturn(Arrays.asList(clientProcessed, clientProcessed, clientProcessed)).thenThrow(new IOException("error"));
+        Iterable<TestDocument> saved = repository.saveAll(Arrays.asList(new TestDocument(), new TestDocument(), new TestDocument()));
         StreamSupport.stream(saved.spliterator(), false).forEach(s -> assertEquals(clientProcessed, s, "Repository should not alternate returned objects"));
         TestDocument failingDocument = new TestDocument();
-        CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.saveAll(List.of(failingDocument)), "All exceptions thrown by client must be reported");
+        CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.saveAll(Collections.singletonList(failingDocument)), "All exceptions thrown by client must be reported");
         assertEquals("error", ex.getCause().getMessage(), "Repository must pass original cause of exceptional state");
     }
 
@@ -73,19 +78,19 @@ class SimpleCouchDbRepositoryTest {
     @Test
     public void testFindAllById() throws IOException {
         TestDocument clientProcessed = new TestDocument("something");
-        when(client.readAll(any(), eq(TestDocument.class))).thenReturn(List.of(clientProcessed, clientProcessed, clientProcessed)).thenThrow(new IOException("error"));
-        Iterable<TestDocument> result = repository.findAllById(List.of("1", "2", "3"));
+        when(client.readAll(any(), eq(TestDocument.class))).thenReturn(Arrays.asList(clientProcessed, clientProcessed, clientProcessed)).thenThrow(new IOException("error"));
+        Iterable<TestDocument> result = repository.findAllById(Arrays.asList("1", "2", "3"));
         assertEquals(3, StreamSupport.stream(result.spliterator(), false).count(), "The same count as requested must be returned");
-        CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.findAllById(List.of("4")), "All exceptions thrown by client must be reported");
+        CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.findAllById(Collections.singletonList("4")), "All exceptions thrown by client must be reported");
         assertEquals("error", ex.getCause().getMessage(), "Repository must pass original cause of exceptional state");
     }
 
     @Test
     public void testFindAll() throws IOException {
-        when(client.readAll(TestDocument.class)).thenReturn(List.of("1", "2", "3"));
-        when(client.readAll(any(), eq(TestDocument.class))).thenReturn(List.of(new TestDocument(), new TestDocument(), new TestDocument())).thenThrow(new IOException("error"));
+        when(client.readAll(TestDocument.class)).thenReturn(Arrays.asList("1", "2", "3"));
+        when(client.readAll(any(), eq(TestDocument.class))).thenReturn(Arrays.asList(new TestDocument(), new TestDocument(), new TestDocument())).thenThrow(new IOException("error"));
         Iterable<TestDocument> result = repository.findAll();
-        assertEquals(3, StreamSupport.stream(result.spliterator(),false).count(), "Repository should not alternate result from client");
+        assertEquals(3, StreamSupport.stream(result.spliterator(), false).count(), "Repository should not alternate result from client");
         CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.findAll(), "All exceptions thrown by client must be reported");
         assertEquals("error", ex.getCause().getMessage(), "Repository must pass original cause of exceptional state");
 
@@ -113,17 +118,17 @@ class SimpleCouchDbRepositoryTest {
 
     @Test
     public void testDeleteAllGiven() throws IOException {
-        when(client.deleteAll(any(), eq(TestDocument.class))).thenReturn(List.of(new TestDocument(), new TestDocument(), new TestDocument())).thenThrow(new IOException("error"));
-        repository.deleteAll(List.of(new TestDocument("1"), new TestDocument("2"), new TestDocument("3")));
+        when(client.deleteAll(any(), eq(TestDocument.class))).thenReturn(Arrays.asList(new TestDocument(), new TestDocument(), new TestDocument())).thenThrow(new IOException("error"));
+        repository.deleteAll(Arrays.asList(new TestDocument("1"), new TestDocument("2"), new TestDocument("3")));
 
         TestDocument failingDocument = new TestDocument();
-        CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.deleteAll(List.of(failingDocument)), "All exceptions thrown by client must be reported");
+        CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.deleteAll(Collections.singletonList(failingDocument)), "All exceptions thrown by client must be reported");
         assertEquals("error", ex.getCause().getMessage(), "Repository must pass original cause of exceptional state");
     }
 
     @Test
     public void testDeleteAll() throws IOException {
-        when(client.deleteAll(TestDocument.class)).thenReturn(List.of(new TestDocument())).thenThrow(new IOException("error"));
+        when(client.deleteAll(TestDocument.class)).thenReturn(Collections.singletonList(new TestDocument())).thenThrow(new IOException("error"));
         repository.deleteAll();
         verify(client, only().description("Delete all must be implemented as delete all call on client")).deleteAll(TestDocument.class);
         CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.deleteAll(), "Every exception thrown by lower layers must be reported");
@@ -140,8 +145,8 @@ class SimpleCouchDbRepositoryTest {
     }
 
     @Test
-    public void testCount() throws IOException{
-        when(client.readAll(TestDocument.class)).thenReturn(List.of("1", "2", "3")).thenThrow(new IOException("error"));
+    public void testCount() throws IOException {
+        when(client.readAll(TestDocument.class)).thenReturn(Arrays.asList("1", "2", "3")).thenThrow(new IOException("error"));
         assertEquals(3, repository.count());
         CouchDbRuntimeException ex = assertThrows(CouchDbRuntimeException.class, () -> repository.count(), "All exceptions thrown by client must be reported");
         assertEquals("error", ex.getCause().getMessage(), "Repository must pass original cause of exceptional state");
